# microtrace

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: README.md
data/src/: OwnerController.java
docs/: ARCHITECTURE.md  DESIGN.md  Microtrace-核心矛盾到机制推导.md  SPEC.md  VISION.md
prompts/: agent.md
src/microtrace/: __main__.py  cli.py  config.py
src/microtrace/agent/: confidence.py  contradiction.py  doom_loop.py  events.py  hop_gate.py  loop.py  pattern_store.py  state.py  types.py
src/microtrace/context/: compaction.py  models.py  prompt.py
src/microtrace/http/: api.py
src/microtrace/llm/: __init__.py  base.py  minimax.py  retry.py
src/microtrace/persistence/: __init__.py  sqlite.py
src/microtrace/prompts/: __init__.py
src/microtrace/repl/: commands.py  main.py
src/microtrace/tools/: __init__.py  base.py  find_class.py  parse_stack_trace.py  read_file.py  search_logs.py
src/microtrace/windows/: console.py
tests/: conftest.py  test_ask_user_flow.py  test_compaction.py  test_confidence.py  test_config.py  test_contradiction.py  test_doom_loop.py  test_hop_gate.py  test_models.py  test_models_p1.py  test_pattern_store.py  test_persistence.py  test_smoke.py  test_state_machine.py  test_tools.py
