[project]
name = "microtrace"
version = "0.1.0"
description = "Java microservice problem diagnosis Agent (VNFM maintainer tool)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "老板", email = "boss@example.com"},
]
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "prompt-toolkit>=3.0",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
microtrace = "microtrace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microtrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
